--- a/src/app/components/mainapp/newdeposits/newdeposits.component.html
+++ b/src/app/components/mainapp/newdeposits/newdeposits.component.html
@@ -210,7 +210,10 @@
       </mat-card>
           
           
-    
+      <div id="print-section" class="print-section">
+          <h2> Deposit {{lastDepositId}}</h2>
+      </div>
+  
 
 
     
