--- a/src/app/components/mainapp/newdeposits/newdeposits.component.html
+++ b/src/app/components/mainapp/newdeposits/newdeposits.component.html
@@ -211,8 +211,8 @@
           
           
       <div id="print-section" class="print-section"  ng-init="isCash=true"  >
-          <h2> Deposit {{lastDepositId}}</h2>
-        
+          <h3> Bains Trust---- A/C No: {{lastBank}} ---- CAD ---- Date {{datetoday | date}} </h3>
+          <h3>Deposit {{lastDepositId}}</h3>
           <table>
             <thead>
                 <th>Item</th>
@@ -230,31 +230,31 @@
             </tbody>
          </table>
          <p></p>
-         <h3>Cash break down</h3>
+         <h3 *ngIf="isCash" >Cash break down</h3>
          <p></p>
         <div *ngIf="isCash">
-                <table  *ngIf="isCash">
+                <table    class="alnright">
                   <tbody>
                   <tr>
-                    <td>{{lastReceipt100}}</td> <td>x100 =</td> <td>{{lastReceipt100 * 100 | currency}}</td>
+                    <td>{{lastReceipt100}}</td> <td>x100 =</td> <td class="alnright">{{lastReceipt100 * 100 | currency}}</td>
                   </tr>
                   <tr>
-                    <td>{{lastReceipt50}}</td> <td>x50 =</td> <td>{{lastReceipt50 * 50 | currency}}</td>
+                    <td>{{lastReceipt50}}</td> <td>x50 =</td> <td  class="alnright">{{lastReceipt50 * 50 | currency}}</td>
                   </tr>
                   <tr>
-                    <td>{{lastReceipt20}}</td> <td>x20 =</td> <td>{{lastReceipt20 * 20 | currency}}</td>
+                    <td>{{lastReceipt20}}</td> <td>x20 =</td> <td  class="alnright">{{lastReceipt20 * 20 | currency}}</td>
                   </tr>
                   <tr>
-                    <td>{{lastReceipt10}}</td> <td>x10 =</td> <td>{{lastReceipt10 * 10 | currency}}</td>
+                    <td>{{lastReceipt10}}</td> <td>x10 =</td> <td  class="alnright">{{lastReceipt10 * 10 | currency}}</td>
                   </tr>
                   <tr>
-                    <td>{{lastReceipt5}}</td> <td>x5=</td> <td>{{lastReceipt5 * 5 | currency}}</td>
+                    <td>{{lastReceipt5}}</td> <td>x5=</td> <td  class="alnright">{{lastReceipt5 * 5 | currency}}</td>
                   </tr>
                   <tr>
-                    <td></td> <td>Coins</td> <td>{{lastReceiptcoins|currency}}</td>
+                    <td></td> <td>Coins</td> <td  class="alnright">{{lastReceiptcoins|currency}}</td>
                   </tr>
                   <tr>
-                  <td></td> <td>Total</td> <td>{{printcash | currency}}</td>
+                  <td></td> <td>Total</td> <td  class="alnright">{{printcash | currency}}</td>
                   </tr>  
                   </tbody>
                 </table>
