fixed sorting on deposit screen

--- a/src/app/components/mainapp/newdeposits/newdeposits.component.html
+++ b/src/app/components/mainapp/newdeposits/newdeposits.component.html
@@ -13,7 +13,7 @@
         
              <!-- Checkbox Column -->
             <ng-container matColumnDef="select">
-              <mat-header-cell *matHeaderCellDef>
+              <mat-header-cell *matHeaderCellDef >
                 <mat-checkbox (change)="$event ? masterToggle() : null"
                               [checked]="selection.hasValue() && isAllSelected()"
                               [indeterminate]="selection.hasValue() && !isAllSelected()">
@@ -28,7 +28,7 @@
             </ng-container>
             <!-- id Column -->
             <ng-container matColumnDef="id">
-              <mat-header-cell *matHeaderCellDef class="example-header">Id</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header class="example-header">Id</mat-header-cell>
               <mat-cell *matCellDef="let row">{{ row.id }}</mat-cell>
             </ng-container>
 
@@ -64,13 +64,13 @@
 
             <!-- Office Column -->
             <ng-container matColumnDef="office">
-              <mat-header-cell *matHeaderCellDef class="example-header">Office</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header class="example-header">Office</mat-header-cell>
               <mat-cell *matCellDef="let row">{{ row.office  }}</mat-cell>
             </ng-container>
         
             <!-- Amount Column -->
             <ng-container matColumnDef="amount">
-              <mat-header-cell *matHeaderCellDef class="example-header">Amount</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header class="example-header">Amount</mat-header-cell>
               <mat-cell *matCellDef="let row">{{ row.amount | currency }}</mat-cell>
             </ng-container>
         
