--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!--The content below is only a placeholder and can be replaced.
+Change here to change the width of the nav bar e.g container-fluid
+-->
 <div class="container">
   <router-outlet></router-outlet>
 </div>
