--- a/src/app/components/mainapp/editreceipt/editreceipt.component.html
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.html
@@ -80,9 +80,9 @@
   
             <div class="row">
               <div class="column" >
-                <!--mat-form-field  >
-                  <input matInput placeholder="For" ngModel name="for">
-                </mat-form-field-->
+                <mat-form-field  >
+                  <input matInput placeholder="Received From" ngModel name="rcvdfrom">
+                </mat-form-field>
               </div>
               <div class="column" >
                 <mat-form-field  >
