--- a/src/app/components/mainapp/editreceipt/editpost-receipt.html
+++ b/src/app/components/mainapp/editreceipt/editpost-receipt.html
@@ -32,49 +32,59 @@
        
     <mat-card>       
         <mat-card-header>
-            <mat-card-title>Post Details</mat-card-title>
+            <mat-card-title>Edit Posted Details</mat-card-title>
             <mat-card-subtitle></mat-card-subtitle>
         </mat-card-header>        
    
-            <mat-table #table [dataSource]="dataSource">
+        <table mat-table [dataSource]="INVOICE_DATA">
+      
+            <!-- Item Column -->
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef> Id </th>
+              
+              <td mat-cell *matCellDef="let e"> <input matInput placeholder="Id" [value]="e.id" [(ngModel)]="e.id" > </td>
+             
+              <td mat-footer-cell *matFooterCellDef> Total </td>
+            </ng-container>
         
-                <!-- Invoice Column -->
-                <ng-container matColumnDef="invoice">
-                    <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
-                    <mat-cell *matCellDef="let e"> {{e.invoice}} </mat-cell>
-                </ng-container>
+             <ng-container matColumnDef="invoice">
+              <th mat-header-cell *matHeaderCellDef> Invoice </th>
+              
+              <td mat-cell *matCellDef="let e"> <input matInput placeholder="Invoice" [value]="e.invoice" [(ngModel)]="e.invoice" > </td>
+             
+              <td mat-footer-cell *matFooterCellDef>  </td>
+            </ng-container>
+          
+            <ng-container matColumnDef="payment">
+              <th mat-header-cell *matHeaderCellDef> Payment </th>
+              
+              <td mat-cell *matCellDef="let e"> <input matInput placeholder="Payment" [value]="e.payment" [(ngModel)]="e.payment" > </td>
+             
+              <td mat-footer-cell *matFooterCellDef>  </td>
+            </ng-container>
+           
+            <ng-container matColumnDef="amountedit">
+              <th mat-header-cell *matHeaderCellDef> Amount </th>
+              
+              <td mat-cell *matCellDef="let e"  > <input matInput placeholder="Amount" [value]="e.amountedit" [(ngModel)]="e.amountedit" style="text-align:right;" > </td>
+             
+             <td mat-footer-cell *matFooterCellDef style="text-align:right; padding:10" > {{getTotalCost() | currency}} </td>
+            </ng-container>
         
-                <!-- Payment Column -->
-                <ng-container matColumnDef="payment">
-                    <mat-header-cell *matHeaderCellDef> Payment </mat-header-cell>
-                    <mat-cell *matCellDef="let e">
-                        <mat-form-field floatLabel="never">
-                            <input matInput placeholder="Payment" [value]="e.payment" [(ngModel)]="e.payment">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
+            <ng-container matColumnDef="action">
+              <th mat-header-cell *matHeaderCellDef> Action </th>
+              
+              <td mat-cell *matCellDef="let e"> <button mat-button-primary> Save </button></td>
+             
+              <td mat-footer-cell *matFooterCellDef>  </td>
+            </ng-container>
         
-                
-                <!-- Amount Column -->
-                <ng-container matColumnDef="amount">
-                    <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
-                    <mat-cell *matCellDef="let e">
-                        <mat-form-field floatLabel="never">
-                            <input matInput placeholder="Amount" [value]="e.amount" [(ngModel)]="e.amount">
-                        </mat-form-field>
-                    </mat-cell>
-                </ng-container>
+           
         
-                <ng-container matColumnDef="actions">
-                    <mat-header-cell  *matHeaderCellDef > Actions </mat-header-cell>
-                    <mat-cell *matCellDef="let row" >
-                         <button mat-button >Edit</button>
-                    </mat-cell>
-                  </ng-container>
-        
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-            </mat-table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
+          </table>
         
     </mat-card>
 
@@ -88,14 +98,8 @@
         Cancel
     </button>
     
-    <button class="mat-raised-button mat-primary" 
-        (click)="save()">
-        Post Receipt
-    </button>
-
-    <button class="mat-raised-button" 
-        (click)="deleteRow()" >Remove Row</button>    
-        
+    
+   
     
 </mat-dialog-actions>
     
