--- a/src/app/components/mainapp/editreceipt/editreceipt.component.css
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.css
@@ -139,6 +139,12 @@ input.ng-invalid.ng-touched {
   margin: 5px 16px;
 }
 
+.mat-column-amountedit{
+  color: #997300;   
+  text-align: right;
+  padding-right: 20px;
+
+ }
 
 
 @media screen  {
