--- a/src/app/components/mainapp/editreceipt/editreceipt.component.css
+++ b/src/app/components/mainapp/editreceipt/editreceipt.component.css
@@ -74,7 +74,7 @@
     max-width: 80px;
     padding-right: 10px;
   }
-  .mat-column-amount {
+  .mat-column-amountx {
     max-width: 100px;
     font-weight: bold;
     display: flex;
@@ -139,11 +139,11 @@ input.ng-invalid.ng-touched {
   margin: 5px 16px;
 }
 
-.mat-column-amountedit{
+.mat-column-amount{
   color: #997300;   
   text-align: right;
   padding-right: 20px;
-
+  justify-content: flex-end;
  }
 
 
