bug fix for deposit report

--- a/src/app/components/mainapp/editdeposits/editdeposits.component.html
+++ b/src/app/components/mainapp/editdeposits/editdeposits.component.html
@@ -184,7 +184,7 @@
 
            
     <div id="print-section" class="print-section"   >
-      <h3> Bains Trust- A/C No: {{lastBank}}  </h3>
+      <h3> Bains Trust- A/C No: {{selectedBankName}}  </h3>
       <h3> Date: {{selectedDate *1000 | date}} </h3>
       <h3>Deposit Id: {{selectedDepositId }}</h3>
       <table table-layout="auto" width="80%">
